--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Almer Tampus" />
+    <meta
+      name="description"
+      content="This web application, the Little Lemon, is a capstone project for the Meta Front-End
+    Developer Professional Certificate."
+    />
+    <meta property="og:title" content="Little Lemon" />
+    <meta
+      property="og:description"
+      content="This web application, the Little Lemon, is a capstone project for the Meta Front-End
+    Developer Professional Certificate."
+    />
   </head>
   <body>
     <div id="root"></div>
